# too

./: .gitignore  Cargo.toml  README.md  readme.md
crates/too_backend/: Cargo.toml
crates/too_backend/src/: command.rs  current_screen.rs  dummy.rs  lib.rs
crates/too_backend/src/events/: event.rs  mod.rs  mouse_event.rs
crates/too_crossterm/: Cargo.toml  README.md
crates/too_crossterm/src/: lib.rs
crates/too_events/: Cargo.toml
crates/too_events/src/: event.rs  key.rs  key_bind.rs  lib.rs  modifiers.rs  mouse_button.rs
crates/too_immediate/: Cargo.toml
crates/too_immediate/examples/: anon_shape.rs  ddd.rs  gradient.rs  hello.rs  layout.rs  overlay.rs  rect_split.rs  torch.rs
crates/too_immediate/src/: app.rs  app_runner.rs  dummy.rs  lib.rs
crates/too_layout/: Cargo.toml
crates/too_layout/src/: align.rs  anchor.rs  constraints.rs  flexible.rs  lib.rs  linear.rs  size.rs
crates/too_math/: Cargo.toml
crates/too_math/src/: align.rs  lib.rs  pos2.rs  rect.rs  size.rs  vec3.rs
crates/too_math/src/layout/: linear.rs  mod.rs
crates/too_overlay/: Cargo.toml
crates/too_overlay/src/: debug_overlay.rs  fps_overlay.rs  lib.rs
crates/too_renderer/: Cargo.toml
crates/too_renderer/src/: backend.rs  buffer.rs  gradient.rs  lib.rs  pixel.rs  renderer.rs  rgba.rs  shape.rs  surface.rs  terminal.rs
crates/too_renderer/src/shapes/: border.rs  fill.rs  label.rs  line.rs  mod.rs  text.rs
crates/too_runner/: Cargo.toml
crates/too_runner/examples/: anon_shape.rs  ddd.rs  gradient.rs  hello.rs  layout.rs  overlay.rs  torch.rs
crates/too_runner/src/: app.rs  app_runner.rs  context.rs  ema_window.rs  fps.rs  lib.rs  overlay.rs  runner.rs
crates/too_shapes/: Cargo.toml
crates/too_shapes/src/: border.rs  fill.rs  label.rs  line.rs  text.rs
crates/too_view/: Cargo.toml
crates/too_view/examples/: colors.rs  dark_mode_switch.rs  gradient_view.rs  nested.rs  nested_simple.rs  separator.rs  view.rs
crates/too_view/src/: app.rs  debug.rs  erased_view.rs  geom.rs  input.rs  lib.rs  response.rs  text.rs  view.rs  view_node.rs  views.rs
crates/too_view/src/views/: aligned.rs  animate.rs  background.rs  button.rs  canvas.rs  constrain.rs  dark_mode.rs  flex.rs  immediate.rs  key_area.rs  label.rs  list.rs  margin.rs  mouse_area.rs  offset.rs  progress_bar.rs  separator.rs  slider.rs  splitter.rs  toggle.rs
examples/: ddd.rs  gradient.rs  hello.rs  intersection.rs  layout.rs  tiling.rs
src/: animation.rs  ema_window.rs  hasher.rs  helpers.rs  index.rs  lib.rs  lock.rs  rasterizer.rs  run.rs  str.rs  text.rs
src/animation/: easing.rs  manager.rs  mod.rs
src/backend/: dummy.rs  event.rs  key.rs  keybind.rs  mod.rs  modifiers.rs  mouse_button.rs
src/backend/events/: mod.rs  modifiers.rs  mouse_event.rs
src/immediate/: app_runner.rs  mod.rs
src/layout/: align.rs  anchor.rs  axis.rs  cross_align.rs  flex.rs  justify.rs  linear.rs  mod.rs
src/lock/: sync.rs  unsync.rs
src/math/: margin.rs  mod.rs  num.rs  pos2.rs  rect.rs  rot2.rs  size.rs  space.rs  vec2.rs
src/overlay/: debug_overlay.rs
src/renderer/: border.rs  buffer.rs  cell.rs  debug.rs  debug_renderer.rs  dummy.rs  gradient.rs  mod.rs  pixel.rs  rasterizer.rs  rgba.rs  surface.rs  term.rs  term_renderer.rs
src/renderer/shapes/: anonymous.rs  fill.rs  label.rs  line.rs  mod.rs
src/runner/: context.rs  mod.rs
src/term/: mod.rs
src/view/: adhoc.rs  builder.rs  debug.rs  erased.rs  filter.rs  geom.rs  helpers.rs  input.rs  internal_views.rs  layout.rs  mod.rs  render.rs  response.rs  state.rs  style.rs  test.rs  ui.rs  view.rs  view_nodes.rs
src/view/input/: interest.rs  mod.rs  view_event.rs
src/view/state/: internal_views.rs
src/view/views/: aligned.rs  background.rs  border.rs  button.rs  checkbox.rs  collapsible.rs  constrain.rs  drop_down.rs  expander.rs  fill.rs  flex.rs  float.rs  key_area.rs  label.rs  layer.rs  list.rs  margin.rs  mod.rs  mouse_area.rs  offset.rs  progress.rs  progress_bar.rs  radio.rs  scrollable.rs  selected.rs  slider.rs  split_view.rs  text_input.rs  todo_value.rs  toggle_switch.rs  wrap.rs
src/views/: aligned.rs  background.rs  border.rs  button.rs  checkbox.rs  collapsible.rs  constrain.rs  drop_down.rs  expander.rs  fill.rs  flex.rs  key_area.rs  label.rs  list.rs  margin.rs  mod.rs  mouse_area.rs  offset.rs  progress.rs  radio.rs  scrollable.rs  selected.rs  slider.rs  split_view.rs  text_input.rs  todo_value.rs  toggle.rs  toggle_switch.rs  wrap.rs
too/: Cargo.toml  README.md
too/examples/: animation.rs  anon_shape.rs  ddd.rs  gradient.rs  hello.rs  layout.rs  lines.rs  overlay.rs  pan_text.rs  rect_split.rs  test.rs  torch.rs  vista.rs  wave.rs
too/src/: animation.rs  index.rs  lib.rs  text.rs
too/src/animation/: manager.rs
too/src/backend/: dummy.rs  mod.rs
too/src/backend/events/: event.rs  key.rs  key_bind.rs  modifiers.rs  mouse_button.rs  mouse_event.rs
too/src/immediate/: app.rs  app_runner.rs
too/src/layout/: anchor.rs
too/src/math/: pos2.rs  rect.rs  vec2.rs  vec3.rs
too/src/math/layout/: linear.rs  mod.rs
too/src/overlay/: debug_overlay.rs  ema_window.rs  fps_overlay.rs  mod.rs
too/src/renderer/: buffer.rs  cell.rs  debug_renderer.rs  gradient.rs  mod.rs  pixel.rs  rgba.rs  shape.rs  surface.rs  term_renderer.rs
too/src/renderer/shapes/: anonymous.rs  border.rs  fill.rs  label.rs  line.rs  mod.rs  text.rs
too/src/runner/: context.rs  mod.rs
too/src/view/: animate_ctx.rs  debug.rs  debug_fmt.rs  destroy_ctx.rs  draw_ctx.rs  elements.rs  erased_view.rs  geom.rs  input.rs  layout_ctx.rs  mod.rs  properties.rs  text.rs  theme.rs  update_ctx.rs  view.rs  view_node.rs  views.rs
too/src/view/views/: aligned.rs  animate.rs  background.rs  border.rs  button.rs  canvas.rs  constrain.rs  dark_mode.rs  event_area.rs  flex.rs  immediate.rs  key_area.rs  label.rs  list.rs  margin.rs  mouse_area.rs  offset.rs  progress_bar.rs  separator.rs  slider.rs  splitter.rs  toggle.rs
