[package]
name = "too"
edition = "2021"
version = "0.1.0"
description = "too - a tui framework"
license = "MIT OR Apache-2.0"
authors = [ "museun <museun@users.noreply.github.com>" ]
documentation = "https://docs.rs/too"
repository = "https://github.com/museun/too"
readme = "README.md"

[features]
default = [ "terminal" ]
terminal = [ "dep:crossterm", "dep:flume" ]
profile = [ "dep:profiling", "profiling/profile-with-puffin" ] # TODO don't limit the crate to just puffins
sync = [ "dep:parking_lot" ]

[dependencies]
compact_str = "0.8.0"
unicode-segmentation = "1.12.0"
unicode-width = { version = "0.2.0", default-features = false }
str_indices = "0.4.4"
slotmap = "1.0.7"

flume = { version = "0.11.1", default-features = false, optional = true }
crossterm = { version = "0.28.1", default-features = false, features = [ "events", "windows" ], optional = true }

profiling = { version = "1.0.16", optional = true }
parking_lot = { version = "0.12.3", optional = true }
