[package]
name = "too"
edition = "2021"
version.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]

[dev-dependencies]
fastrand = "2.1.1"
rayon = "1.10.0"
too_crossterm.workspace = true
