[package]
name = "too"
edition = "2021"
version.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
compact_str = "0.8.0"
thunderdome = "0.6.1"
unicode-segmentation.workspace = true
unicode-width.workspace = true

[dev-dependencies]
fastrand = "2.1.1"
rayon = "1.10.0"
too_crossterm.workspace = true
