[package]
name = "too_crossterm"
edition = "2021"
license.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
crossterm = { version = "0.28.1", default-features = false, features = [ "events", "windows" ] }
flume = { version = "0.11.0", default-features = false }

too_backend.workspace = true
too_math.workspace = true
too_renderer.workspace = true
