[package]
name = "too_immediate"
edition = "2021"
version.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
too_backend.workspace = true
too_math.workspace = true
too_renderer.workspace = true
too_shapes.workspace = true
too_layout.workspace = true
too_runner.workspace = true
too_overlay.workspace = true

[dev-dependencies]
fastrand = "2.1.1"
rayon = "1.10.0"
too_crossterm.workspace = true
