[package]
name = "too_overlay"
edition = "2021"
version.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
too_math.workspace = true
too_renderer.workspace = true
too_shapes.workspace = true
too_layout.workspace = true
