[package]
name = "too_runner"
edition = "2021"
license.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
too_events.workspace = true
too_math.workspace = true
too_renderer.workspace = true
too_shapes.workspace = true
too_layout.workspace = true

[dev-dependencies]
fastrand = "2.1.1"
rayon = "1.10.0"
too_crossterm.workspace = true
