[package]
name = "too_runner"
edition = "2021"
license.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
too_backend.workspace = true
too_math.workspace = true
too_renderer.workspace = true
too_overlay.workspace = true
