[package]
name = "too_shapes"
edition = "2021"
license.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
too_math.workspace = true
too_renderer.workspace = true
too_layout.workspace = true
unicode-segmentation = "1.12.0"
