[package]
name = "too_view"
edition = "2021"
license.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
too_renderer.workspace = true
too_backend.workspace = true
too_math.workspace = true
too_runner.workspace = true
too_overlay.workspace = true

thunderdome = "0.6.1"

[dev-dependencies]
too_crossterm.workspace = true
