[package]
name = "too_view"
edition = "2021"
license.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
publish = false # NOTE don't publish this yet

[dependencies]
too.workspace = true
thunderdome = "0.6.1"

[dev-dependencies]
too_crossterm.workspace = true
