[package]
name = "too_view"
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

publish = false # NOTE don't publish this yet

[dependencies]
too.workspace = true
unicode-width.workspace = true
unicode-segmentation.workspace = true
thunderdome = "0.6.1"

[dev-dependencies]
too_crossterm.workspace = true
